--- a/lib/generators/bootstrap.tf.erb
+++ b/lib/generators/bootstrap.tf.erb
@@ -1,112 +1,14 @@
-provider "aws" {
-  region = "${var.region}"
-}
-
-data "aws_region" "current" {
-  current = true
-}
-
-resource "aws_s3_bucket" "admin" {
-  bucket = "${var.admin_bucket}"
-
-  versioning {
-    enabled = true
-  }
-  
-  lifecycle_rule {
-    id      = "athena_tmp_results_expiration"
-    prefix  = "${var.deployment_id}/tmp/"
-    enabled = true
-
-    expiration {
-      days = 3
-    }
-  }
-}
-
-resource "aws_s3_bucket" "data" {
-  bucket = "${var.data_bucket}"
-
-  versioning {
-    enabled = true
-  }
-
-  lifecycle_rule {
-    id      = "convergdb_data_version_expiration"
-    enabled = true
-
-    noncurrent_version_expiration {
-      days = 7
-    }
-  }
-}
-
-resource "aws_dynamodb_table" "lock" {
-  name           = "${var.lock_table}"
-
-  read_capacity  = 5
-  write_capacity = 5
-  hash_key       = "LockID"
-
-  attribute {
-    name = "LockID"
-    type = "S"
-  }
-}
-
-resource "local_file" "main_backend" {
-    content = <<EOF
-{
-  "terraform" : {
-    "backend" : {
-      "s3" : {
-        "bucket" : "${var.admin_bucket}",
-        "key" : "terraform/convergdb.tfstate",
-        "dynamodb_table" : "${var.lock_table}",
-        "region" : "${data.aws_region.current.name}"
-      }
-    }
-  }
-}
-EOF
-    filename = "${path.module}/../terraform/terraform.tf.json"
-}
-
-resource "local_file" "main_variables" {
-    content = <<EOF
-variable "deployment_id" {
-  default = "${var.deployment_id}"
-}
-
-variable "region" {
-  default = "${data.aws_region.current.name}"
-}
-
-variable "admin_bucket" {
-  default = "${var.admin_bucket}"
-}
-
-variable "data_bucket" {
-  default = "${var.data_bucket}"
-}
-EOF
-    filename = "${path.module}/../terraform/variables.tf"
-}
-
+# variables
 variable "region" {}
 
-variable "deployment_id" {
-  default = "<%= deployment_id %>"
-}
-
-variable "admin_bucket" {
-  default = "<%= admin_bucket %>"
-}
-
-variable "data_bucket" {
-  default = "<%= data_bucket %>"
-}
-
-variable "lock_table" {
-  default = "<%= lock_table %>"
+module "convergdb_bootstrap" {
+  source = "<%= ConvergDB::TERRAFORM_MODULES[:convergdb_bootstrap] %>"
+  region = "${var.region}"
+  deployment_id = "<%= deployment_id %>"
+  admin_bucket = "<%= admin_bucket %>"
+  data_bucket = "<%= data_bucket %>"
+  lock_table = "<%= lock_table %>"
+  etl_lock_table = "<%= etl_lock_table %>"
+  backend_file_path = "${path.module}/../terraform/terraform.tf.json"
+  variables_file_path = "${path.module}/../terraform/variables.tf"
 }
