--- a/lib/generators/glue/pyspark_athena_from_s3.py.erb
+++ b/lib/generators/glue/pyspark_athena_from_s3.py.erb
@@ -1,6 +1,6 @@
 convergdb.source_from_target(
   sql_context(),
 """
-<%= JSON.pretty_generate(structure) %>
+<%= JSON.pretty_generate(structure).gsub('${var.', '${') %>
 """
 )
